# red-black-tree

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
benchmark/: CMakeLists.txt  README.md
benchmark/include/: benchmark.h  red_black_tree.h
benchmark/include/benchmarking/: benchmark.h  red_black_tree.h
benchmark/plot/: insert-1-100000.csv  insert-avg.csv  plot.py  search-1-100000-old.csv  search-1-100000.csv  search-avg.csv
benchmark/plot/csv/: insert-avg.csv  insert-worst.csv  search-avg.csv  search-worst.csv
benchmark/plot/csv-old/: insert-1-100000-old.csv  search-worst.csv
benchmark/src/: avl_tree.c  benchmark.c  binary_search_tree.c  binary_tree.c  burgergfx.c  comparators.c  linked_list.c  main.c  rbtree.c  red_black_tree.c
benchmark/src/benchmarking/: benchmark.c  binary_search_tree.c  burgergfx.c  linked_list.c
include/: rbtree.h
include/benchmarking/: avl_tree.h  benchmark.h
plot/: insert.csv  plot.py  search.csv
red-black-tree/: CMakeLists.txt
red-black-tree/include/: rbtree.h
red-black-tree/src/: main.c  rbtree.c
src/: main.c  rbtree.c
src/benchmarking/: avl_tree.c  benchmark.c  binary_tree.c  comparators.c  red_black_tree.c
